WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272796
Crash in InlineDisplayLineBuilder::addLineClampTrailingLinkBoxIfApplicable
https://bugs.webkit.org/show_bug.cgi?id=272796
Summary
Crash in InlineDisplayLineBuilder::addLineClampTrailingLinkBoxIfApplicable
alan
Reported
2024-04-16 19:38:03 PDT
<
rdar://122698690
>
Attachments
[fast-cq]Patch
(1.59 KB, patch)
2024-04-16 19:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-04-16 19:46:33 PDT
Created
attachment 470951
[details]
[fast-cq]Patch
EWS
Comment 2
2024-04-17 07:21:26 PDT
Committed
277613@main
(1dcba44c2314): <
https://commits.webkit.org/277613@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470951
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug