Crash in InlineDisplayLineBuilder::addLineClampTrailingLinkBoxIfApplicable https://bugs.webkit.org/show_bug.cgi?id=272796 <rdar://122698690>

Reviewed by Antti Koivisto.

This is a speculative fix when the insertion point points to the very beginning of the display content. It may happen when we do partial layout. However we don't run partial layout on content that would trigger "link box" type of line clamping (needs inline box), hence the speculative nature of this change.

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::addLineClampTrailingLinkBoxIfApplicable):

Canonical link: https://commits.webkit.org/277613@main